<resources>
    <string name="app_name">LogSwasth</string>
    <string name="welcome">Welcome to Logswath!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset">Reset Password</string>
    <string name="changeLang">Change Language</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="registerVillager">Register Villagers</string>
    <string name="editVillager">Edit Villager Details</string>
    <string name="viewAnalysed">View Analysed Data</string>
    <string name="enterAadhar">Enter Aadhar Number</string>
    <string name="enterAge">Enter Age</string>
    <string name="highestEd">Education Qualification</string>
    <string name="state">State*</string>
    <string name="district">District*</string>
    <string name="aadharnum">Aadhar Number :</string>
    <string name="age">Age</string>
    <string name="proceedTo">Proceed to next page</string>
    <string name="selectIncome">Select Income*</string>
    <string name="selectCaste">Select Caste*</string>
    <string name="selectDisease">Select Disease*</string>
    <string name="submitbt">Submit</string>
    <string name="updataData">Update Database</string>
    <string name="para">Select Parameter To Be Analysed</string>
    <string name="numerical">Show Numerical Analysis</string>
    <string name="graphical">View Graphical Visualization</string>
    <string name="agedis">Age Distribution</string>
    <string name="disOfPop">Distribution Of Population Over Age</string>
    <string name="below18">Below 18</string>
    <string name="bet18to65">Between 18 to 65</string>
    <string name="above65">Above 65</string>
    <string name="incomeran">Income Range</string>
    <string name="incomedis">Income Distribution Over Population</string>
    <string name="below10">Below 10000</string>
    <string name="bet1">Between 10000-50000</string>
    <string name="bet2">Between 50000-150000</string>
    <string name="above50">Above 150000</string>
    <string name="caste">Caste</string>
    <string name="castedis">Distribution Of Caste Over Population</string>
    <string name="edu">Education Qualification</string>
    <string name="edudis">Number of people having education qualification</string>
    <string name="hsc">Higher Secondary Certificate</string>
    <string name="ssc">Senior Secondary Certificate</string>
    <string name="und">Undergraduation</string>
    <string name="post">Postgraduation</string>
    <string name="other">Other</string>
    <string name="general">General</string>
    <string name="sc">Scheduled Caste(SC)</string>
    <string name="st">Scheduled Tribes(ST)</string>
    <string name="obc">Other Backward Classes</string>
    <string name="dis">Disease</string>
    <string name="disDist">Number Of People That Are Suffering</string>
    <string name="cd">Cardiovascular Diseases</string>
    <string name="rd">Respiratory Diseases</string>
    <string name="id">Intestinal Diseases</string>
    <string name="nd">Neurological Disorders</string>
    <string name="od">Others</string>
    <string name="enterAll">Enter All The Details</string>
    <string name="loginsuccess">Login Successfull !!</string>
    <string name="loginunsuccess">Login Unsuccessfull !!</string>
    <string name="enterAadharnumb">Enter Aadhar Number Correctly</string>
    <string name="enterCorrectAge">Enter Correct Age</string>
    <string name="updateCloud">Data Successfully Updated On Cloud</string>
    <string name="correctAadhar">Aadhar Number Present In Database</string>
    <string name="selectPara">Select The Parameter</string>
    <string name="detailCorrect">Enter Details Correctly</string>
    <string name="resetLink">Reset Password Link Sent</string>
    <string name="noresetLink">Reset Password Link Not Sent</string>
    <string name="signin">Signing In</string>
    <string name="logout">Logout</string>
    <string-array name="education_level">
        <item>Select Education</item>
        <item>Higher Secondary Certificate</item>
        <item>Senior Secondary Certificate</item>
        <item>Undergraduation</item>
        <item>Postgraduation</item>
        <item>Other</item>
    </string-array>
    <string-array name="socio_economic_status">
        <item>Select Caste</item>
        <item>General</item>
        <item>Scheduled Caste(SC)</item>
        <item>Scheduled Tribes(ST)</item>
        <item>Other Backward Classes(OBC)</item>
    </string-array>
    <string-array name="income1">
        <item>Select Income</item>
        <item>Below 10000</item>
        <item>10000-50000</item>
        <item>50000-150000</item>
        <item>Above 150000</item>
    </string-array>
    <string-array name="parameter">
        <item>Select Parameter To Be Analysed</item>
        <item>Age</item>
        <item>Income</item>
        <item>Education</item>
        <item>Disease</item>
        <item>Caste</item>
    </string-array>
    <string-array name="disease_domain">
        <item>Select Disease</item>
        <item>Cardiovascular Diseases</item>
        <item>Respiratory Diseases</item>
        <item>Intestinal Diseases</item>
        <item>Neurological disorders</item>
        <item>Others</item>
    </string-array>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Select Your District</item>
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="array_chhattisgarh_districts">
        <item>Select Your District</item>
        <item>Balod</item>
        <item>Baloda Bazar</item>
        <item>Balrampur Ramanujganj</item>
        <item>Bastar</item>
        <item>Bemetara</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Gariaband</item>
        <item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kabirdham</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Mungeli</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sukma</item>
        <item>Surajpur</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="array_goa_districts">
        <item>Select Your District</item>
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
</resources>